<resources>
  <string name="app_name">SMS Solidario</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Configuración</string>
  <string name="about">Información</string>
  <string name="btn_send_message">Send message</string>
  <string name="btn_cancel">Cancelar</string>
  <string name="btn_save">Guardar</string>
  <string name="hint_telephone_num">Número de teléfono</string>
  <string name="hint_message_txt">Mensaje</string>
  <string name="title_activity_settings">Configuración</string>
  <string name="settings_toggle">Activo</string>
  <string name="settings_button">Configurar fecha</string>
  <string name="select_day">Seleccionar día</string>
  <string name="select_hour">Seleccionar hora</string>
  <string name="max_msgs">Máxima cantidad de mensajes a enviar</string>
  <string name="checkbox_text">Notificar al enviar</string>
  <string-array name="dates_array">
    <item>Primer día del mes</item>
    <item>Ultimo día del mes</item>
    <item>Día personalizado</item>
  </string-array>
  <string name="title_activity_splash_screen">SplashScreenActivity</string>
  <string name="title_activity_receiver">ReceiverActivity</string>
  <string name="activity_main_gratitude">Una acción puede generar\nmuchas reacciones.\nTu aporte logrará un gran impacto :)\nGracias por ser parte.</string>
  <string name="activity_main_already_programmed">¡Está programada la primera\ndonación!\nGracias por ser parte.</string>
  <string name="activity_main_your_impact">Tu impacto hasta hoy:</string>
  <string name="activity_main_lets_begin">¡Comencemos!</string>
  <string name="activity_main_sms">SMS</string>
  <string name="activity_main_donated">donados.</string>
  <string name="activity_main_app_status_active">Aplicación activa</string>
  <string name="activity_main_app_status_inactive">Aplicación inactiva</string>
  <string name="activity_main_configure_schedule_text">Programar</string>
  <string name="activity_main_edit_donation">Editar donación</string>
  <string name="settings_activity_title">Programar donación</string>
  <string name="action_done">Hecho</string>
  <string name="description_image_solidario">Solidaridad</string>
  <string name="about_interest">Es de gran interés para nosotros saber en qué cosas podemos mejorar esta app, queremos escuchar tus recomendaciones!\n\nEscribinos a: smssolidario@bixlabs.com</string>
  <string name="about_developed_by">Aplicación desarrollada y diseñada por:</string>
  <string name="about_bixlabs_web">www.bixlabs.com</string>
  <string name="about_bixlabs_copyright">©2017 BixLabs</string>
  <string name="about_version">Versión</string>
  <string name="toaster_sending_sms">Se va a donar dinero de tu saldo, por favor toca aquí para confirmar tu donación</string>
  <string name="accept">Aceptar</string>
  <string name="cancel">Cancelar</string>
  <string name="permission_work_correctly">Para que la aplicación funcione correctamente, necesitamos que le indiques a tu celular que esta app enviará mensajes programados por ti.</string>
  <string name="permission_important">Es importante que actives "recordar mi selección".</string>
  <string name="permission_validated">Ser donante validado :)</string>
  <string name="permission_thanks">¡Gracias por ser parte!</string>
  <string name="notification_next_schedule">Próximo envío automático: </string>
  <string name="title_activity_confirmation">Confirma tu donación</string>
  <string name="texto_cancelar">Cancelar</string>
  <string name="confirmar_donacion">Confirmar Donación</string>
</resources>
