<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="15dp"
  android:paddingLeft="29dp"
  android:paddingRight="29dp"
  android:paddingTop="26dp" >

  <ImageView
    android:id="@+id/image_brand_permission"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:contentDescription="@string/description_image_solidario"
    android:src="@drawable/ic_dialog_sms_solidario" />

  <TextView
    android:id="@+id/textView_permission_work_correctly"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginTop="20dp"
    android:text="@string/permission_work_correctly"
    android:textColor="@color/gratitudeMainText"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/textView_permission_important"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginTop="10dp"
    android:text="@string/permission_important"
    android:textColor="@color/black"
    android:textSize="14sp"
    android:textStyle="bold" />

  <Button
    android:id="@+id/button_permission_validated"
    android:theme="@style/ValidateButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/permission_validated"
    android:textColor="@color/white"
    android:textSize="22sp" />

  <TextView
    android:id="@+id/textView_permission_thanks"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:text="@string/permission_thanks"
    android:textColor="@color/letsBeginText"
    android:textSize="16sp" />

  <TextView
    android:id="@+id/textView_permission_copyrights"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:text="@string/about_bixlabs_copyright"
    android:textColor="@color/gratitudeMainText"
    android:textSize="12sp" />

</LinearLayout>
