<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="15dp"
  android:paddingLeft="29dp"
  android:paddingRight="29dp"
  android:paddingTop="26dp" >

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
      android:id="@+id/image_brand_about"
      android:layout_width="100dp"
      android:layout_height="55dp"
      android:layout_alignParentLeft="true"
      android:contentDescription="@string/description_image_solidario"
      android:src="@drawable/ic_dialog_sms_solidario" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:orientation="vertical" >

      <TextView
        android:id="@+id/textView_about_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

      <TextView
        android:id="@+id/textView_about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textColor="@color/gratitudeMainText"
        android:textSize="16sp" />

    </LinearLayout>

  </RelativeLayout>

  <TextView
    android:id="@+id/textView_about_interest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:autoLink="email"
    android:text="@string/about_interest"
    android:textColor="@color/black"
    android:textSize="13sp" />

  <TextView
    android:id="@+id/textView_about_developed_by"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:text="@string/about_developed_by"
    android:textColor="@color/gratitudeMainText"
    android:textSize="12sp" />

  <ImageView
    android:id="@+id/image_bixlabs"
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="15dp"
    android:contentDescription="@string/description_image_solidario"
    android:src="@drawable/ic_dialog_bixlabs" />

  <TextView
    android:id="@+id/textView_about_bixlabs_web"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="15dp"
    android:autoLink="web"
    android:text="@string/about_bixlabs_web"
    android:textColor="@color/link_color"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/textView_about_copyrights"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:text="@string/about_bixlabs_copyright"
    android:textColor="@color/gratitudeMainText"
    android:textSize="12sp" />

</LinearLayout>
