<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="uy.com.bix.app.smsproject.activity.SettingsActivity">

  <Switch
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_toggle"
    android:id="@+id/switch1"
    android:layout_marginRight="30dp"
    android:layout_marginEnd="30dp"
    android:checked="false"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"/>

  <EditText
    android:id="@+id/editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/hint_telephone_num"
    android:inputType="phone"
    android:layout_marginTop="115dp"
    android:layout_below="@+id/switch1"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <EditText
    android:id="@+id/editText2"
    android:layout_width="356dp"
    android:layout_height="150dp"
    android:hint="@string/hint_message_txt"
    android:inputType="textAutoComplete"
    android:layout_weight="0.20"
    android:layout_below="@+id/editText"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Notificar al enviar"
    android:id="@+id/checkBox"
    android:layout_below="@+id/editText2"
    android:layout_marginTop="52dp"
    android:layout_alignRight="@+id/switch1"
    android:layout_alignEnd="@+id/switch1"
    android:checked="true"/>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_button"
    android:id="@+id/btn_date"
    android:layout_marginTop="33dp"
    android:layout_below="@+id/switch1"
    android:layout_centerHorizontal="true"/>

</RelativeLayout>
