<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:toggle="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical"
  android:weightSum="1"
  tools:context=".MainActivity" >

  <include
    layout="@layout/actionbar_main" />

  <ViewFlipper
    android:id="@+id/view_flipper_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" >

      <ImageView
        android:id="@+id/image_solidario"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/description_image_solidario"
        android:src="@drawable/divider_solidario" />

      <TextView
        android:id="@+id/text_gratitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/activity_main_gratitude"
        android:textColor="@color/gratitudeMainText"
        android:textSize="19sp" />

      <TextView
        android:id="@+id/text_lets_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/activity_main_lets_begin"
        android:textColor="@color/letsBeginText"
        android:textSize="31sp" />

    </LinearLayout>

    <include
      layout="@layout/partial_donation_programmed" />

    <include
      layout="@layout/partial_donated_messages" />

  </ViewFlipper>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:layout_marginTop="40dp"
    android:background="@color/statusLayoutBackground"
    android:gravity="center" >

    <TextView
      android:id="@+id/text_app_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginLeft="20dp"
      android:text="@string/activity_main_app_status_inactive"
      android:textColor="@color/black"
      android:textSize="23sp" />

    <com.awesomego.widget.ToggleButton
      android:id="@+id/toggle_app_status"
      android:layout_width="65dp"
      android:layout_height="42dp"
      android:layout_centerVertical="true"
      android:layout_marginLeft="10dp"
      android:layout_toRightOf="@+id/text_app_status"
      toggle:offBorderColor="@color/toggleAppStatusInactive"
      toggle:offColor="@color/toggleAppStatusInactive"
      toggle:onColor="@color/toggleAppStatusActive"
      toggle:spotColor="@color/white" />

  </RelativeLayout>

  <Button
    android:id="@+id/button_configure_schedule"
    android:theme="@style/ScheduleButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:drawableLeft="@drawable/ic_configure_schedule"
    android:text="@string/activity_main_configure_schedule_text"
    android:textColor="@color/white"
    android:textSize="32sp" />

</LinearLayout>
