<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.bixlabs.smssolidario.activity.ConfirmationActivity"
  tools:showIn="@layout/activity_confirmation">


  <RelativeLayout
    android:layout_width="344dp"
    android:layout_height="551dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_editor_absoluteY="8dp">

    <TextView
      android:id="@+id/textView5"
      android:layout_width="165dp"
      android:layout_height="36dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="44dp"
      android:layout_weight="1"
      android:text="@string/hint_telephone_num"
      android:textAlignment="center"
      android:textSize="18sp"
      tools:layout_editor_absoluteX="103dp"
      tools:layout_editor_absoluteY="30dp" />

    <TextView
      android:id="@+id/textView6"
      android:layout_width="165dp"
      android:layout_height="36dp"
      android:layout_alignStart="@+id/phoneInput"
      android:layout_below="@+id/phoneInput"
      android:layout_marginTop="33dp"
      android:layout_weight="1"
      android:text="@string/hint_message_txt"
      android:textAlignment="center"
      android:textSize="18sp"
      tools:layout_editor_absoluteX="103dp"
      tools:layout_editor_absoluteY="30dp" />

    <EditText
      android:id="@+id/phoneInput"
      android:layout_width="165dp"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/textView5"
      android:layout_below="@+id/textView5"
      android:layout_weight="1"
      android:ems="10"
      android:inputType="phone"
      android:text=""
      tools:layout_editor_absoluteX="103dp"
      tools:layout_editor_absoluteY="216dp" />

    <EditText
      android:id="@+id/textMessageInput"
      android:layout_width="165dp"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/textView6"
      android:layout_below="@+id/textView6"
      android:layout_weight="1"
      android:ems="10"
      android:inputType="text"
      android:text=""
      tools:layout_editor_absoluteX="103dp"
      tools:layout_editor_absoluteY="216dp" />

    <Button
      android:id="@+id/cancelButton"
      android:layout_width="100dp"
      android:layout_height="82dp"
      android:layout_alignParentStart="true"
      android:layout_alignTop="@+id/confirmButton"
      android:layout_marginStart="45dp"
      android:layout_weight="1"
      android:text="@string/texto_cancelar"
      android:textAlignment="center"
      tools:layout_editor_absoluteX="72dp"
      tools:layout_editor_absoluteY="293dp" />

    <Button
      android:id="@+id/confirmButton"
      android:layout_width="100dp"
      android:layout_height="82dp"
      android:layout_below="@+id/textMessageInput"
      android:layout_marginStart="48dp"
      android:layout_marginTop="57dp"
      android:layout_toEndOf="@+id/cancelButton"
      android:layout_weight="1"
      android:background="@drawable/button_background"
      android:text="@string/confirmar_donacion"
      android:textAlignment="center"
      tools:layout_editor_absoluteX="188dp"
      tools:layout_editor_absoluteY="293dp" />

  </RelativeLayout>
</android.support.constraint.ConstraintLayout>
